# idcat

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  encrypt-key-material.sh  idcat.toml.example
.deploy/: idcat.toml  manifest-builder.toml
.github/workflows/: dump-token-claims.yaml  publish-image.yaml  rust.yaml
examples/: kms_sign_jwt.rs
git-credential-helper/: Cargo.toml  README.md
git-credential-helper/src/: config.rs  credential.rs  idcat.rs  main.rs  token_source.rs
src/: auth.rs  config.rs  error.rs  github-permissions.toml  github.rs  jwt.rs  kms.rs  kubernetes.rs  main.rs  nats.rs  secret.rs  service.rs  signer.rs
