[package]
name = "idcat"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
clap = { version = "4.6", features = ["derive"] }
jsonwebtoken = { version = "10.3", features = ["rust_crypto"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "native-tls"] }
rsa = { version = "0.9", features = ["sha2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
signature = "2.2"
thiserror = "2.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "net", "sync"] }
toml = "1.1"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
